--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "mkdir -p dist;browserify src/app.js > dist/bundle.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test --watch"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/tpgmartin/JSGame-clone#readme",
   "dependencies": {
     "browserify": "^13.0.1"
+  },
+  "devDependencies": {
+    "mocha": "^2.5.3"
   }
 }
